--- a/style.css
+++ b/style.css
@@ -3,3 +3,19 @@ body {
   height: 100%;
   margin: 0;
 }
+header{text-align: center;}
+#featured-property{display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+p{width: 800px;}}
+  a{
+    padding-left: 10px;
+    padding-right: 10px;
+    background-color: coral;
+  }
+  div{
+    float: left;
+  background-color: lightskyblue;
+  text-align: center;
+  width: 25%;}
